tests/baselines/reference/internalAliasVarInsideTopLevelModuleWithoutExport.errors.txt
internalAliasVarInsideTopLevelModuleWithoutExport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasVarInsideTopLevelModuleWithoutExport.ts (1 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x = 10;
    }
    
    import b = a.x;
    export var bVal = b;
    
    